@@ -19,6 +19,7 @@ import sys
 import xbmc
 # pylint: disable=E0401
 from resources.lib import main
+from resources.lib import script
 
 if "process_errors" not in locals():
     # pylint: disable=C0103
@@ -27,5 +28,13 @@ if "process_errors" not in locals():
 if __name__ == "__main__":
     url = sys.argv[0]
     xbmc.log(f"[Crunchyroll] {url}", xbmc.LOGDEBUG)
-    # start addon
-    main.run(process_errors=process_errors)
+    if url == "main.py":
+        # handling script call
+        method = sys.argv[1]
+        xbmc.log(f"[Crunchyroll] Script {method}")
+        if method == "clear_subtitles_cache":
+            script.clear_subtitles_cache()
+    else:
+        # start addon
+        xbmc.log("[Crunchyroll] running plugin")
+        main.run(process_errors=process_errors)
