@@ -1,5 +1,6 @@
 v1.0.4(2024.XX.XX)
 - Update settings to modern format
+- Add a way to clean subtitles cache
 
 v1.0.3(2024.04.11)
 - Update Basic Auth
